manifests/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyservice-nodeport
spec:
  type: NodePort
  selector:
    app: pyservice
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
