manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyservice
spec:
  selector:
    app: pyservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
