manifests/ingress.yaml
apiVersion: networking.manifests.io/v1
kind: Ingress
metadata:
  name: pyservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /pyservice
        pathType: Prefix
        backend:
          service:
            name: pyservice
            port:
              number: 80
